--- a/BLACK_GARLIC_HOUSE/index.html
+++ b/BLACK_GARLIC_HOUSE/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="shortcut icon" href="./favicon.jpeg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Black Garlic House | Home</title>
+    <title>Black Garlic House</title>
 
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Domine:wght@700&display=swap');
